force-app/main/default/objects/Apttus_Config2__TransferPrice__c/Apttus_Config2__TransferPrice__c.object-meta.xml
<CustomObject>
    <description>Represents association of source price like factory price with source cost like FES source cost</description>
    <label>Transfer Price</label>
    <nameField>
        <label>Transfer Price</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transfer Prices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>