force-app/main/default/objects/Apttus_Config2__TransferPrice__c/fields/Apttus_Config2__IsPrimary__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsPrimary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies whether this mapping is primary</description>
    <inlineHelpText>Specifies whether this mapping is primary</inlineHelpText>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>