force-app/main/default/objects/Apttus_Config2__TransferPrice__c/fields/Apttus_Config2__SourceChargeType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SourceChargeType__c</fullName>
    <label>Source Charge Type</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>