force-app/main/default/objects/Apttus_Config2__TransferPrice__c/fields/Apttus_Config2__SourceField__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SourceField__c</fullName>
    <description>Field name in Line Item object from where price is copied.</description>
    <label>Source Field</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>