force-app/main/default/objects/Apttus_Config2__TransferPrice__c/fields/Apttus_Config2__TargetCostModelId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__TargetCostModelId__c</fullName>
    <description>Reference to master cost model for which the transfer price is defined</description>
    <label>Target Cost Model</label>
    <referenceTo>Apttus_Config2__CostModel__c</referenceTo>
    <relationshipLabel>Transfer Prices</relationshipLabel>
    <relationshipName>TransferPrices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>