force-app/main/default/objects/Apttus_Config2__TransferPrice__c/fields/Apttus_Config2__TargetField__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__TargetField__c</fullName>
    <label>Target Field</label>
    <length>128</length>
    <type>Text</type>
</CustomField>